--- a/root/styles.css
+++ b/root/styles.css
@@ -30,3 +30,8 @@ div {
 .hidden {
     display: none;
 }
+
+.instructions {
+    font-size: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
