--- a/root/styles.css
+++ b/root/styles.css
@@ -1,5 +1,6 @@
 h1 {
     font-size: 3rem;
+    text-transform: uppercase;
     margin-bottom: 0;
 }
 
@@ -15,7 +16,8 @@ body {
 }
 
 header {
-    height: 200px;
+    padding: 24px 10%;
+    min-height: 250px;
 }
 
 p, button {
@@ -44,6 +46,10 @@ p, button {
 .instructions {
     font-size: 1rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+main {
+    text-align: center;
 }
 
 canvas {
